<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/reg_error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_error_email"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_et_email" />

    <TextView
        android:id="@+id/reg_error_conf_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_error_conf_password"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_et_pw_confirm" />

    <Button
        android:id="@+id/btn_reg_confirm"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:text="@string/reg_btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_et_pw_confirm"
        app:layout_constraintVertical_bias="0.23" />

    <EditText
        android:id="@+id/reg_et_email"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"

        android:ems="10"
        android:hint="@string/reg_et_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_tv_email" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_reg_exit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:background="#A3A3A3"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/reg_et_pw"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/reg_et_pw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_tv_password" />

    <TextView
        android:id="@+id/reg_tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reg_tv_pw_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_error_password" />

    <EditText
        android:id="@+id/reg_et_username"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/reg_et_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_tv_username" />

    <EditText
        android:id="@+id/reg_et_pw_confirm"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/reg_et_pw_confirm"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_tv_confirm_password" />

    <TextView
        android:id="@+id/reg_form_name"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:text="@string/reg_tv_form_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/reg_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reg_tv_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_error_email" />

    <TextView
        android:id="@+id/reg_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/reg_tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_form_name" />

    <TextView
        android:id="@+id/reg_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reg_tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_error_username" />

    <TextView
        android:id="@+id/reg_error_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_error_username"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_et_username" />

    <TextView
        android:id="@+id/reg_error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_error_password"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_et_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>