<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/login_error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_error_password"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_password" />

    <TextView
        android:id="@+id/login_error_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_error_username"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_input" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/login_btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_chb_remember_me"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="197dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_tv_register"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_password" />

    <TextView
        android:id="@+id/TV_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_username" />

    <EditText
        android:id="@+id/login_tv_input"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/login_et_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_UserName" />

    <TextView
        android:id="@+id/TV_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login_tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_activity_name" />

    <EditText
        android:id="@+id/login_tv_password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_Password" />

    <TextView
        android:id="@+id/login_tv_activity_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/login_activity_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/login_chb_remember_me"
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_chb_remember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_register" />

</androidx.constraintlayout.widget.ConstraintLayout>